syntax = "proto3";

import "google/protobuf/empty.proto";

package blocklog.grpc;

option go_package = "github.com/shifty11/blocklog-backend/grpc/subscription";

service SubscriptionService {
  rpc ListSubscriptions (google.protobuf.Empty) returns (ListSubscriptionsResponse) {}
  rpc Subscribe (SubscribeRequest) returns (SubscribeResponse) {}
}

message Subscription {
  int64 id = 1;
  string name = 2;
}

message ListSubscriptionsResponse {
  repeated Subscription subscriptions = 1;
}

message SubscribeRequest {
  int64 id = 1;
}

message SubscribeResponse {
}
